[package]
name = "cytos"
version = "1.2.1"
edition = "2021"
authors = ["Aaron Mussig <aaronmussig@gmail.com>"]
description = "A collection of frequently used Bioinformatics scripts/tasks written in Rust."
readme = "README.md"
repository = "https://github.com/aaronmussig/cytos"
license = "GPL-3.0"
rust-version = "1.70.0"

[dependencies]
bio = "1.4.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
